tests/files/type_checker_tests/should_pass/004.cmdr
//Test bindings type check
x: int = 2;
y = x;
