tests/files/type_checker_tests/should_fail/071.cmdr
//Should fail using type variables inappropriately
type x = int;
println x;
